// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-dropdown.vue Demo-append-to body 1`] = `
<div>
  <div class="root" type="text">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉菜单</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade" style="width: 0px;">
      <div class="root" style="display: none;">
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="lcp-iconv singleicon">
            <span class="iconwrap">
              <svg aria-hidden="true" class="iconsvg">
                <use xlink:href="#pc-task" />
              </svg>
            </span>
            <div class="icontext" vusion-slot-name="default">
            </div>
          </span> item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="lcp-iconv singleicon">
            <span class="iconwrap">
              <svg aria-hidden="true" class="iconsvg">
                <use xlink:href="#pc-task" />
              </svg>
            </span>
            <div class="icontext" vusion-slot-name="default">
            </div>
          </span> item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="lcp-iconv singleicon">
            <span class="iconwrap">
              <svg aria-hidden="true" class="iconsvg">
                <use xlink:href="#pc-task" />
              </svg>
            </span>
            <div class="icontext" vusion-slot-name="default">
            </div>
          </span> item
        </a>
        <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="lcp-iconv singleicon">
            <span class="iconwrap">
              <svg aria-hidden="true" class="iconsvg">
                <use xlink:href="#pc-task" />
              </svg>
            </span>
            <div class="icontext" vusion-slot-name="default">
            </div>
          </span> item
        </a>
      </div>
    </transition-stub>
    <div class="popperghost"></div>
  </div>
</div>
`;

exports[`u-dropdown.vue Demo-主要按钮样式 1`] = `
<div>
  <div class="root" type="primary">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉菜单</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;">
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="root" vusion-slot-name-edit="text">选项一</span>
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="root" vusion-slot-name-edit="text">选项二</span>
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="root" vusion-slot-name-edit="text">选项三</span>
        </a>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-dropdown.vue Demo-列表含图标样式 1`] = `
<div>
  <div class="root" type="text">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉菜单</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;">
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="lcp-iconv singleicon">
            <span class="iconwrap">
              <svg aria-hidden="true" class="iconsvg">
                <use xlink:href="#pc-menu" />
              </svg>
            </span>
            <div class="icontext" vusion-slot-name="default">
            </div>
          </span>
          <span class="root" vusion-slot-name-edit="text">选项一</span>
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="lcp-iconv singleicon">
            <span class="iconwrap">
              <svg aria-hidden="true" class="iconsvg">
                <use xlink:href="#pc-menu" />
              </svg>
            </span>
            <div class="icontext" vusion-slot-name="default">
            </div>
          </span>
          <span class="root" vusion-slot-name-edit="text">选项二</span>
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="lcp-iconv singleicon">
            <span class="iconwrap">
              <svg aria-hidden="true" class="iconsvg">
                <use xlink:href="#pc-menu" />
              </svg>
            </span>
            <div class="icontext" vusion-slot-name="default">
            </div>
          </span>
          <span class="root" vusion-slot-name-edit="text">选项三</span>
        </a>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-dropdown.vue Demo-基本用法 1`] = `
<div>
  <div class="root" type="text">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉菜单</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;">
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
      </div>
    </transition-stub>
  </div>
  <div class="root" type="primary">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉按钮</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;">
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
      </div>
    </transition-stub>
  </div>
  <div class="root" type="primary_secondary">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉按钮</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;">
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
      </div>
    </transition-stub>
  </div>
  <div class="root" type="normal">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉按钮</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;">
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
      </div>
    </transition-stub>
  </div>
  <div class="root" type="more">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉按钮</span>
      <span class="lcp-iconv iconMore">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-more" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;">
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-dropdown.vue Demo-基础按钮样式 1`] = `
<div>
  <div class="root" type="text">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉菜单</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;">
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="root" vusion-slot-name-edit="text">选项一</span>
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="root" vusion-slot-name-edit="text">选项二</span>
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="root" vusion-slot-name-edit="text">选项三</span>
        </a>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-dropdown.vue Demo-手动触发 1`] = `
<div class="root" direction="horizontal" type vusion-slot-name="default">
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    弹出
  </a>
  <div class="root" type="text">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉菜单</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;">
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
        <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          item
        </a>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-dropdown.vue Demo-更多按钮样式 1`] = `
<div>
  <div class="root" type="more">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉菜单</span>
      <span class="lcp-iconv iconMore">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-more" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;">
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="root" vusion-slot-name-edit="text">选项一</span>
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="root" vusion-slot-name-edit="text">选项二</span>
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="root" vusion-slot-name-edit="text">选项三</span>
        </a>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-dropdown.vue Demo-禁用状态 1`] = `
<div>
  <div class="root" disabled="disabled" type="text">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉菜单</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;"></div>
    </transition-stub>
  </div>
  <div class="root" disabled="disabled" type="primary">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉按钮</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;"></div>
    </transition-stub>
  </div>
  <div class="root" disabled="disabled" type="primary_secondary">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉按钮</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;"></div>
    </transition-stub>
  </div>
  <div class="root" disabled="disabled" type="normal">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉按钮</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;"></div>
    </transition-stub>
  </div>
</div>
`;

exports[`u-dropdown.vue Demo-触发方式 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div class="root" type="text">
      <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
        <span class="root" vusion-slot-name-edit="text">下拉菜单hover展开</span>
        <i class="icon"></i>
      </div>
      <transition-stub class="popper" name="fade">
        <div class="root" style="display: none;">
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <div class="root">
            <div class="head" vusion-click-enabled>
              <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
                下拉组
              </div>
              <div>
                <span class="expander"></span>
                <span class="extra"></span>
              </div>
            </div>
            <transition-stub class="popper" data-popper-escaped data-popper-placement="right-start" data-popper-reference-hidden name="fade" style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(4px, 0px);">
              <div class="root" style="display: none;">
                <div class="body" vusion-slot-name="default">
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <div class="root">
                    <div class="head" vusion-click-enabled>
                      <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
                        下拉组
                      </div>
                      <div>
                        <span class="expander"></span>
                        <span class="extra"></span>
                      </div>
                    </div>
                    <transition-stub class="popper" data-popper-escaped data-popper-placement="right-start" data-popper-reference-hidden name="fade" style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(4px, 0px);">
                      <div class="root" style="display: none;">
                        <div class="body" vusion-slot-name="default">
                          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                            item1
                          </a>
                          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                            item1
                          </a>
                          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                            item1
                          </a>
                          <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                            item1
                          </a>
                          <div class="root">
                            <div class="head" vusion-click-enabled>
                              <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
                                下拉组
                              </div>
                              <div>
                                <span class="expander"></span>
                                <span class="extra"></span>
                              </div>
                            </div>
                            <transition-stub class="popper" data-popper-escaped data-popper-placement="right-start" data-popper-reference-hidden name="fade" style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(4px, 0px);">
                              <div class="root" style="display: none;">
                                <div class="body" vusion-slot-name="default">
                                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                                    item1
                                  </a>
                                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                                    item1
                                  </a>
                                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                                    item1
                                  </a>
                                  <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                                    item1
                                  </a>
                                </div>
                              </div>
                            </transition-stub>
                          </div>
                        </div>
                      </div>
                    </transition-stub>
                  </div>
                </div>
              </div>
            </transition-stub>
          </div>
          <div class="root">
            <div class="head" vusion-click-enabled>
              <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
                下拉组2
              </div>
              <div>
                <span class="expander"></span>
                <span class="extra"></span>
              </div>
            </div>
            <transition-stub class="popper" data-popper-escaped data-popper-placement="right-start" data-popper-reference-hidden name="fade" style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(4px, 0px);">
              <div class="root" style="display: none;">
                <div class="body" vusion-slot-name="default">
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                </div>
              </div>
            </transition-stub>
          </div>
          <div class="root">
            <div class="head" vusion-click-enabled>
              <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
                下拉组3
              </div>
              <div>
                <span class="expander"></span>
                <span class="extra"></span>
              </div>
            </div>
            <transition-stub class="popper" data-popper-escaped data-popper-placement="right-start" data-popper-reference-hidden name="fade" style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(4px, 0px);">
              <div class="root" style="display: none;">
                <div class="body" vusion-slot-name="default">
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                </div>
              </div>
            </transition-stub>
          </div>
          <div class="root">
            <div class="head" vusion-click-enabled>
              <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
                下拉组4
              </div>
              <div>
                <span class="expander"></span>
                <span class="extra"></span>
              </div>
            </div>
            <transition-stub class="popper" data-popper-escaped data-popper-placement="right-start" data-popper-reference-hidden name="fade" style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(4px, 0px);">
              <div class="root" style="display: none;">
                <div class="body" vusion-slot-name="default">
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root" type="text">
      <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
        <span class="root" vusion-slot-name-edit="text">下拉菜单click展开</span>
        <i class="icon"></i>
      </div>
      <transition-stub class="popper" name="fade">
        <div class="root" style="display: none;">
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <div class="root">
            <div class="head" vusion-click-enabled>
              <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
                下拉组
              </div>
              <div>
                <span class="expander"></span>
                <span class="extra"></span>
              </div>
            </div>
            <transition-stub class="popper" data-popper-escaped data-popper-placement="right-start" data-popper-reference-hidden name="fade" style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(4px, 0px);">
              <div class="root" style="display: none;">
                <div class="body" vusion-slot-name="default">
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <div class="root">
                    <div class="head" vusion-click-enabled>
                      <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
                        下拉组
                      </div>
                      <div>
                        <span class="expander"></span>
                        <span class="extra"></span>
                      </div>
                    </div>
                    <transition-stub class="popper" data-popper-escaped data-popper-placement="right-start" data-popper-reference-hidden name="fade" style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(4px, 0px);">
                      <div class="root" style="display: none;">
                        <div class="body" vusion-slot-name="default">
                          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                            item1
                          </a>
                          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                            item1
                          </a>
                          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                            item1
                          </a>
                          <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                            item1
                          </a>
                          <div class="root">
                            <div class="head" vusion-click-enabled>
                              <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
                                下拉组
                              </div>
                              <div>
                                <span class="expander"></span>
                                <span class="extra"></span>
                              </div>
                            </div>
                            <transition-stub class="popper" data-popper-escaped data-popper-placement="right-start" data-popper-reference-hidden name="fade" style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(4px, 0px);">
                              <div class="root" style="display: none;">
                                <div class="body" vusion-slot-name="default">
                                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                                    item1
                                  </a>
                                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                                    item1
                                  </a>
                                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                                    item1
                                  </a>
                                  <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                                    item1
                                  </a>
                                </div>
                              </div>
                            </transition-stub>
                          </div>
                        </div>
                      </div>
                    </transition-stub>
                  </div>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root" type="text">
      <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
        <span class="root" vusion-slot-name-edit="text">下拉菜单right-click展开</span>
        <i class="icon"></i>
      </div>
      <transition-stub class="popper" name="fade">
        <div class="root" style="display: none;">
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
        </div>
      </transition-stub>
    </div>
    <div class="root" type="text">
      <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
        <span class="root" vusion-slot-name-edit="text">下拉菜单double-click展开</span>
        <i class="icon"></i>
      </div>
      <transition-stub class="popper" name="fade">
        <div class="root" style="display: none;">
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-dropdown.vue Demo-触发方式 2`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div class="root" type="text">
      <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
        <span class="root" vusion-slot-name-edit="text">下拉菜单hover展开</span>
        <i class="icon"></i>
      </div>
      <transition-stub class="popper" name="fade">
        <div class="root" style="display: none;">
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <div class="root">
            <div class="head" vusion-click-enabled>
              <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
                下拉组
              </div>
              <div>
                <span class="expander"></span>
                <span class="extra"></span>
              </div>
            </div>
            <transition-stub class="popper" data-popper-escaped data-popper-placement="right-start" data-popper-reference-hidden name="fade" style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(4px, 0px);">
              <div class="root" style="display: none;">
                <div class="body" vusion-slot-name="default">
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root" type="text">
      <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
        <span class="root" vusion-slot-name-edit="text">下拉菜单click展开</span>
        <i class="icon"></i>
      </div>
      <transition-stub class="popper" name="fade">
        <div class="root" style="display: none;">
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
            item
          </a>
          <div class="root">
            <div class="head" vusion-click-enabled>
              <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
                下拉组
              </div>
              <div>
                <span class="expander"></span>
                <span class="extra"></span>
              </div>
            </div>
            <transition-stub class="popper" data-popper-escaped data-popper-placement="right-start" data-popper-reference-hidden name="fade" style="position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(4px, 0px);">
              <div class="root" style="display: none;">
                <div class="body" vusion-slot-name="default">
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                  <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
                    item1
                  </a>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-dropdown.vue Demo-选项带图标 1`] = `
<div>
  <div class="root" type="text">
    <div can-nodeinfo class="title" no-for-edit vusion-click-enabled vusion-slot-name="title" vusion-slot-name-edit="title">
      <span class="root" vusion-slot-name-edit="text">下拉菜单</span>
      <i class="icon"></i>
    </div>
    <transition-stub class="popper" name="fade">
      <div class="root" style="display: none;">
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="lcp-iconv singleicon">
            <span class="iconwrap">
              <svg aria-hidden="true" class="iconsvg">
                <use xlink:href="#pc-task" />
              </svg>
            </span>
            <div class="icontext" vusion-slot-name="default">
            </div>
          </span> item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="lcp-iconv singleicon">
            <span class="iconwrap">
              <svg aria-hidden="true" class="iconsvg">
                <use xlink:href="#pc-task" />
              </svg>
            </span>
            <div class="icontext" vusion-slot-name="default">
            </div>
          </span> item
        </a>
        <a class="root" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="lcp-iconv singleicon">
            <span class="iconwrap">
              <svg aria-hidden="true" class="iconsvg">
                <use xlink:href="#pc-task" />
              </svg>
            </span>
            <div class="icontext" vusion-slot-name="default">
            </div>
          </span> item
        </a>
        <a class="root" disabled="disabled" target="_self" vusion-slot-name="default" vusion-slot-name-edit="text">
          <span class="lcp-iconv singleicon">
            <span class="iconwrap">
              <svg aria-hidden="true" class="iconsvg">
                <use xlink:href="#pc-task" />
              </svg>
            </span>
            <div class="icontext" vusion-slot-name="default">
            </div>
          </span> item
        </a>
      </div>
    </transition-stub>
  </div>
</div>
`;
